# merge-dns

./: .gitignore  Cargo.toml  README.md  config.json
src/: client.rs  config.rs  main.rs  resource.rs  rr.rs  server.rs
src/server/: server.rs
